# methodology

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Pipfile  README.md  adTechModel.py  computeDefaults.py  pyproject.toml  requirements.txt  tox.ini
defaults/: atp-defaults.yaml  docs-defaults.yaml  end_user_device-defaults.yaml  networking-defaults.yaml  organization-defaults.yaml  property-defaults.yaml  transmission_rate-defaults.yaml
docs/: README.md  adTechModel.md  adTechPlatforms.md  ad_tech_model.md  ad_tech_model.mdx  api.md  api.mdx  calculations.mdx  channel_considerations.mdx  channels_consideration.mdx  cluster.mdx  consumer_devices.md  consumer_devices.mdx  cookieSync.md  cookie_sync_model.md  cookie_sync_model.mdx  corporate.md  corporate_model.md  corporate_model.mdx  creative.md  creative.mdx  data_quality.mdx  data_transfer.md  data_transfer.mdx  datacenters.md  digital_out_of_home.mdx  fine_tuning.mdx  genai.mdx  inference.mdx  lifecycle.md  lifecycle.mdx  mint.json  model_quality.mdx  nvidia_a100.mdx  overview.mdx  pc_emissions_model.xlsx  property_metrics.mdx  publisher_model.md  publisher_model.mdx  software_carbon_intensity.mdx  (+2 more)
scope3/: adtech_model.py
scope3_methodology/: __init__.py  adtech_model.py  compute_defaults.py  corporate.py  fact_finder.py  model_ad_tech_platform.py  model_corporate_emissions.py  model_publisher_emissions.py  publisher.py  utils.py
scripts/: validate_computed_defaults.sh
templates/: ad_tech_platform.yaml  dsp.yaml  ecommerce.yaml  generic_organization.yaml  generic_property.yaml  network.yaml  (+4 more)
(+188 files in other folders)
